Adds tests