@@ -21,7 +21,7 @@
         <url>https://github.com/databricks/databricks-jdbc</url>
     </scm>
   <properties>
-    <arrow.version>10.0.1</arrow.version>
+    <arrow.version>13.0.0</arrow.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <mockito.version>5.2.0</mockito.version>
@@ -34,17 +34,13 @@
     <httpclient.version>4.5.14</httpclient.version>
     <commons-io.version>2.13.0</commons-io.version>
   </properties>
-  <repositories>
-    <repository>
-      <id>databricks-jdbc-oss-local-repo</id>
-      <url>file://${basedir}/src/main/resources</url>
-    </repository>
-  </repositories>
   <dependencies>
     <dependency>
       <groupId>com.databricks</groupId>
       <artifactId>databricks-sdk-java</artifactId>
       <version>0.6.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/resources/databricks-sdk-java-0.6.0.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>org.apache.arrow</groupId>
@@ -54,6 +50,11 @@
     <dependency>
       <groupId>org.apache.arrow</groupId>
       <artifactId>arrow-vector</artifactId>
+      <version>${arrow.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.arrow</groupId>
+      <artifactId>arrow-memory-netty</artifactId>
       <version>${arrow.version}</version>
     </dependency>
     <dependency>
@@ -125,6 +126,14 @@
               </goals>
             </execution>
           </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M6</version>
+          <configuration>
+            <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
